--- a/main.html
+++ b/main.html
@@ -11,6 +11,21 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<nav>
+		<a class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s"></a>
+		<ul>
+			<li>Home</li>
+			<li>About</li>
+			<li>Squad</li>
+			<li>Contact Us</li>
+				
+		</ul>
+
+		
+	</nav>
+
+	<h1>Chennai Super Kings</h1>
+
 </body>
 
 </html>
