--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 
 	<nav>
-		<a class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s"></a>
+		<a class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo"></a>
 		<ul>
 			<li>Home</li>
 			<li>About</li>
