--- a/main.html
+++ b/main.html
@@ -11,20 +11,29 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<nav>
-		<a class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo"></a>
-		<ul>
-			<li>Home</li>
-			<li>About</li>
-			<li>Squad</li>
-			<li>Contact Us</li>
+	<h1>Chennai Super Kings</h1>
+
+	<nav class="nav-1">
+		
+	
+			<a class="nav-2" href="#">Home</a>
+			<a class="nav-2" href="#">About</a>
+			<a class="nav-2" href="#">Squad</a>
+			<a class="nav-2" href="#">Contact Us</a>
 				
 		</ul>
 
 		
 	</nav>
 
-	<h1>Chennai Super Kings</h1>
+	<img id="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo">
+
+	<ul>
+		<li>item 1</li>
+		<li>item 2</li>
+		<li>item 3</li>
+	</ul>
+	
 
 </body>
 
