--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<h1>Chennai Super Kings</h1>
+	<h1 role="heading" aria-label="title">Chennai Super Kings</h1>
 
-	<nav class="nav-1">
+	<nav class="nav-1" role="navigation" aria-label="menu">
 		
 	
 			<a class="nav-2" href="#">Home</a>
@@ -26,10 +26,10 @@
 		
 	</nav>
 
-	<img id="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo">
+	<img role="image" aria-label="picture" id="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo">
 
-	<ul>
-		<li>item 1</li>
+	<ul role="unordered list" aria-label="list">
+		<li role="contentinfo">item 1</li>
 		<li>item 2</li>
 		<li>item 3</li>
 	</ul>
