--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 		
 	</nav>
 
-	<img role="image" aria-label="picture" id="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo">
+	<img role="img" aria-label="picture" id="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo">
 
 	<ul role="unordered list" aria-label="list">
 		<li role="contentinfo">item 1</li>
