--- a/main.html
+++ b/main.html
@@ -28,8 +28,8 @@
 
 	<img role="img" aria-label="picture" id="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRFZjW6QSTiRAsovsh0UiRiYpkzL4cx1nJTFsL9yeLg&s" alt="logo">
 
-	<ul role="unordered list" aria-label="list">
-		<li role="contentinfo">item 1</li>
+	<ul role="list" aria-label="list">
+		<li role="listitem">item 1</li>
 		<li>item 2</li>
 		<li>item 3</li>
 	</ul>
